--- a/example_TFIM.ipynb
+++ b/example_TFIM.ipynb
@@ -24,7 +24,7 @@
   {
    "source": [
     "## Example file:\n",
-    "## RSNN method apply on Transvers Field Ising Model\n",
+    "## RSNN method apply on Transverse Field Ising Model\n",
     "\n",
     "This file is a example & sample code of the application of the RSNN method on TFIM.\n",
     "The basic functions are in the TFIM1D.py, including the generating function of TFIM Hamiltonain, Exact solution (JW transformation), ...etc. \n"
@@ -48,7 +48,7 @@
     "N_spin refer to the system size $(N)$ of the spin system.   \n",
     "M is the basis number we choose to construct each sample matrix.  \n",
     "N_s is the number of sample matrix ($N_s$ in paper).  \n",
-    "N_train_half is half of the number of training data).  \n",
+    "N_train_half is half of the number of training data ($N_{train}/2$).  \n",
     "lh_ and rh_ are the parameter range of $\\lambda$ count from left/right side. "
    ],
    "cell_type": "markdown",
